# seraph

./: CMakeLists.txt  main.c
data/: assets.json
src/: animation.c  animation.h  assets.c  assets.h  camera.h  common.c  common.h  main.c  sprite.c  sprite.h  texture.c  texture.h  texture_region.c  texture_region.h
src/doom/: doom_utils.c  doom_utils.h
src/json/: json.c  json.h
